--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -239,16 +239,16 @@ body {
    margin-bottom: 27pt;
    padding-top: 3.5pt;
    position: relative;
-   border-top: 1pt solid #000000;
+   border-top: 1.25pt solid #000000;
 
    &::before {
     content: '';
     position: absolute;
-    top:-3pt;
+    top:-4pt;
     left: 0;
     display: block;
     width: 100%;
-    border-top: 1pt solid #000000;
+    border-top: 1.25pt solid #000000;
    }
    &-title {
     margin-bottom: 4pt;
@@ -272,8 +272,8 @@ body {
    padding-top: 5.5pt;
    padding-bottom: 6pt;
    margin-bottom: 46pt;
-   border-top: 1pt solid #000000;
-   border-bottom: 1pt solid #000000;
+   border-top: 1.25pt solid #000000;
+   border-bottom: 1.25pt solid #000000;
 
    &-title {
     margin-bottom: 4pt;
@@ -295,8 +295,8 @@ body {
    margin-bottom: 55pt;
    padding-top: 7pt;
    padding-bottom: 7pt;
-   border-top: 1pt solid #000000;
-   border-bottom: 1pt solid #000000;
+   border-top: 1.25pt solid #000000;
+   border-bottom: 1.25pt solid #000000;
 
    &-title {
     margin-bottom: 4pt;
@@ -399,7 +399,7 @@ body {
     margin-bottom: 25pt;
     padding-top: 10pt;
     max-width: 223pt;
-    border-top: 1pt solid #000;
+    border-top: 1.25pt solid #000;
     text-align: center;
 
     &-title {
@@ -427,10 +427,11 @@ body {
 
      &-item {
       font-size: 8pt;
-      font-weight: 600;
+      font-weight: 500;
 
-      &-title {
+      &.title {
        margin-bottom: 3.5pt;
+       font-weight: 600;
       }
      }
     }
@@ -441,7 +442,7 @@ body {
    margin: 0 auto;
    max-width: 108pt;
    padding-top: 8.5pt;
-   border-top: 1pt solid #000;
+   border-top: 1.25pt solid #000;
    text-align: center;
 
    &-title {
@@ -495,9 +496,9 @@ body {
  &-chart {
   padding-top: 13pt;
   // padding-bottom: 23pt;
-  margin-bottom: 6pt;
+  margin-bottom: 0;
   text-align: center;
-  border: 1px solid #000000;
+  border: 1.25pt solid #000000;
   overflow: hidden;
 
   &:not(:last-of-type) {
@@ -521,6 +522,7 @@ body {
 
   &-chart {
    margin: 0 auto;
+   margin-top: -20pt;
    width: 97%!important;
    height: 99%!important;
   }
@@ -568,7 +570,7 @@ body {
  }
 
  &-super {
-  margin-top: 44pt;
+  margin-top: 19pt;
   display: inline-block;
   padding-top: 6pt;
   border-top: .25pt solid #000000;
@@ -619,10 +621,12 @@ body {
 
  &-chart {
   padding-top: 13pt;
+  padding-left: 5pt;
+  padding-right: 20pt;
   // padding-bottom: 23pt;
   margin-bottom: 6pt;
   text-align: center;
-  border: 1px solid #000000;
+  border: 1.25pt solid #000000;
   overflow: hidden;
 
   &:not(:last-of-type) {
@@ -654,7 +658,8 @@ body {
   }
 
   &-legend {
-   margin: 12pt 10pt;
+   margin: 12pt 5pt;
+   margin-right: -10pt;
    padding: 12pt;
    display: flex;
    align-items: center;
@@ -749,7 +754,7 @@ body {
   // padding-bottom: 23pt;
   margin-bottom: 6pt;
   text-align: center;
-  border: 1px solid #000000;
+  border: 1.25pt solid #000000;
   overflow: hidden;
 
   &:not(:last-of-type) {
@@ -885,7 +890,7 @@ body {
   // padding-bottom: 23pt;
   margin-bottom: 0;
   text-align: center;
-  border: 1px solid #000000;
+  border: 1.25pt solid #000000;
   overflow: hidden;
 
   &:not(:last-of-type) {
