--- a/templates/development.html
+++ b/templates/development.html
@@ -110,7 +110,15 @@
         },
         vAxis: {
           baseline: 1,
-          ticks: [1, 2, 3, 4, 5]
+          ticks: [1, 2, 3, 4, 5],
+          textStyle: {
+            fontSize: 11,
+          },
+        },
+        hAxis: {
+          textStyle: {
+            fontSize: 11,
+          },
         },
         colors: ['rgb(7, 72, 127)', 'rgb(85, 154, 25)', 'rgb(247, 221, 49)', 'rgb(234, 39, 37)'],
         backgroundColor: 'transparent'
@@ -129,7 +137,15 @@
         },
         vAxis: {
           baseline: 1,
-          ticks: [1, 2, 3, 4, 5]
+          ticks: [1, 2, 3, 4, 5],
+          textStyle: {
+            fontSize: 11,
+          },
+        },
+        hAxis: {
+          textStyle: {
+            fontSize: 11,
+          },
         },
         colors: ['rgb(7, 72, 127)', 'rgb(247, 221, 49)', 'rgb(234, 39, 37)'],
         backgroundColor: 'transparent'
