--- a/templates/self-evaluation.html
+++ b/templates/self-evaluation.html
@@ -92,6 +92,7 @@
           position: "none"
         },
         chartArea: {
+          width: '90%',
           top: 16,
           left: 19,
           right: 30,
@@ -104,31 +105,34 @@
             color: 'transparent'
           },
           textStyle: {
-            fontSize: 12,
+            fontSize: 11,
           },
           textPosition: 'none'
         },
         vAxis: {
-          ticks: [16, {
-              v: 1,
-              f: 'thirty two'
-            }, {
-              v: 2,
-              f: 'sixty four'
-            },
-            {
-              v: 3,
-              f: 'sixty four'
-            },
-            {
-              v: 4,
-              f: 'sixty four'
-            },
-            {
-              v: 5,
-              f: 'sixty four'
-            }
-          ],
+          textStyle: {
+            fontSize: 11,
+          },
+          // ticks: [16, {
+          //     v: 1,
+          //     f: 'thirty two'
+          //   }, {
+          //     v: 2,
+          //     f: 'sixty four'
+          //   },
+          //   {
+          //     v: 3,
+          //     f: 'sixty four'
+          //   },
+          //   {
+          //     v: 4,
+          //     f: 'sixty four'
+          //   },
+          //   {
+          //     v: 5,
+          //     f: 'sixty four'
+          //   }
+          // ],
           // gridlandes: {
           //  color: 'transparent'
           // },
