--- a/templates/team-members-performance-02.html
+++ b/templates/team-members-performance-02.html
@@ -99,11 +99,14 @@
     },
     hAxis: {
      baseline: 1,
-     ticks: [1, 2, 3, 4, 5]
+     ticks: [1, 2, 3, 4, 5],
+     textStyle: {
+      fontSize: 11
+     }
     },
     vAxis: {
      textStyle: {
-      fontSize: 9.5 // or the number you want
+      fontSize: 11
      }
     }
    };
