--- a/templates/at-the-moment.html
+++ b/templates/at-the-moment.html
@@ -25,7 +25,7 @@
  <div class="moment-chart">
   <p class="moment-chart-title">Situation at the moment</p>
   <p class="moment-chart-text">Averages of peer to peer and team feedbacks of the period 1.9.2020 - 1.9.2020</p>
-  <div class="moment-chart-chart" id="chart-01" style="width: 900px; height: 300px;"></div>
+  <div class="moment-chart-chart" id="chart-01"></div>
  </div>
 
  <div class="moment-caption">
@@ -38,7 +38,7 @@
  <div class="moment-chart">
   <p class="moment-chart-title">Situation at the moment</p>
   <p class="moment-chart-text">Averages of team lead and custom feedbacks of the period 1.9.2020 - 1.9.2020</p>
-  <div class="moment-chart-chart" id="chart-02" style="width: 900px; height: 300px;"></div>
+  <div class="moment-chart-chart" id="chart-02"></div>
  </div>
 
  <div class="moment-super">
@@ -84,12 +84,12 @@
    var view01 = new google.visualization.DataView(data01);
    var view02 = new google.visualization.DataView(data02);
 
-   var options = {
+   var options01 = {
     backgroundColor: {
      fill: 'transparent'
     },
     width: '100%',
-    height: 250,
+    height: 290,
     chartArea: {
      width: '90%',
     },
@@ -101,13 +101,50 @@
     },
     vAxis: {
      baseline: 1,
-     ticks: [1, 2, 3, 4, 5]
+     ticks: [1, 2, 3, 4, 5],
+     textStyle: {
+      fontSize: 11,
+     },
+    },
+    hAxis: {
+     textStyle: {
+      fontSize: 11,
+     },
+    }
+   };
+
+   var options02 = {
+    backgroundColor: {
+     fill: 'transparent'
+    },
+    width: '100%',
+    height: 290,
+    chartArea: {
+     width: '90%',
+    },
+    bar: {
+     groupWidth: "54.11%"
+    },
+    legend: {
+     position: "none"
+    },
+    vAxis: {
+     baseline: 1,
+     ticks: [1, 2, 3, 4, 5],
+     textStyle: {
+      fontSize: 11,
+     },
+    },
+    hAxis: {
+     textStyle: {
+      fontSize: 11,
+     },
     }
    };
    var chart01 = new google.visualization.ColumnChart(document.getElementById("chart-01"));
    var chart02 = new google.visualization.ColumnChart(document.getElementById("chart-02"));
-   chart01.draw(view01, options);
-   chart02.draw(view02, options);
+   chart01.draw(view01, options01);
+   chart02.draw(view02, options02);
   }
  </script>
 
